# ros_trees_qcr

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
examples/: bottle_binner_backend  bottle_binner_tree
nodes/: run_task
src/qut_tasks/branches/: __init__.py
src/qut_tasks/leaves/: console.py  manipulation.py
src/ros_leaves/leaves/manipulation/: motion.py  status.py
src/ros_leaves/leaves/mobility/: status.py
src/ros_leaves/leaves/vision/: observation.py
src/ros_leaves/leaves/visualisation/: detections.py  pose.py
src/ros_trees_leaves/branches/generic/: __init__.py  timing.py
src/ros_trees_leaves/branches/manipulation/: grasping.py  motion.py
src/ros_trees_leaves/leaves/mobility/: __init__.py  motion.py
src/ros_trees_leaves/leaves/vision/: detectors.py
src/ros_trees_qcr/branches/generic/: task.py  timing.py
src/ros_trees_qcr/branches/manipulation/: grasping.py  motion.py
src/ros_trees_qcr/leaves/: __init__.py
src/ros_trees_qcr/leaves/generic/: __init__.py  audio.py  task.py  ui.py
src/ros_trees_qcr/leaves/manipulation/: grasping.py  motion.py  status.py
src/ros_trees_qcr/leaves/mobility/: motion.py  status.py
src/ros_trees_qcr/leaves/vision/: __init__.py  detectors.py  observation.py
src/ros_trees_qcr/leaves/visualisation/: __init__.py  pose.py  (+1 more)
src/rv_leaves/: __init__.py
src/rv_leaves/branches/: __init__.py
src/rv_tasks/: __init__.py
src/rv_tasks/branches/: manipulation.py
src/rv_tasks/leaves/: __init__.py  console.py  manipulation.py
tasks/demo_speech_manipulator/: tree.py
tasks/hello_manipulator/: tree.py
tasks/hello_panda/: tree.py
(+42 files in other folders)
