<?xml version="1.0"?>
<package format="2">
  <name>rv_leaves</name>
  <version>0.1.0</version>
  <description>The rv_leaves package</description>

  <maintainer email="b.talbot@qut.edu.au">ben</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rv_trees</exec_depend>

  <export>
  </export>
</package>
