<?xml version="1.0"?>
<package format="2">
  <name>ros_trees_qcr</name>
  <version>0.1.1</version>
  <description>The ros_trees_qcr package</description>

  <maintainer email="b.talbot@qut.edu.au">Ben Talbot</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ros_trees</exec_depend>
  <exec_depend>ros_numpy</exec_depend>

  <export>
  </export>
</package>
